Remove questionably useful bits from the documentation